--- a/ui/src/app/components/shared/notification-display/notification-display.component.scss
+++ b/ui/src/app/components/shared/notification-display/notification-display.component.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-m);
-  max-width: var(--spacing-8xl);
+  max-width: var(--container-s);
   pointer-events: none;
 }
 
